--- a/RetroGame Collect/Base.lproj/Main.storyboard
+++ b/RetroGame Collect/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RetroGame_Collect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="RetroGame_Collect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -22,7 +22,19 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="j7U-sK-W3I">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="j7U-sK-W3I" secondAttribute="bottom" id="M9E-0u-pxw"/>
+                            <constraint firstItem="j7U-sK-W3I" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="XBs-9S-Cuh"/>
+                            <constraint firstAttribute="trailing" secondItem="j7U-sK-W3I" secondAttribute="trailing" id="b5j-iA-Plm"/>
+                            <constraint firstItem="j7U-sK-W3I" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="kbW-Tg-NSQ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="3NJ-TP-5Wc">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="B2g-sk-gfJ">
@@ -31,6 +43,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="gameTableView" destination="j7U-sK-W3I" id="HYb-LJ-XnI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
